--- a/MSVS/snake1.vcxproj.filters
+++ b/MSVS/snake1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\src\newGameLayout.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\uiWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\newGameLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\uiWidget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
