Implemented color scheme settngs option.

--- a/MSVS/snake1.vcxproj.filters
+++ b/MSVS/snake1.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\src\uiWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\colorScheme.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\uiWidget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\colorScheme.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
