--- a/MSVS/snake1.vcxproj
+++ b/MSVS/snake1.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\colorScheme.cpp" />
     <ClCompile Include="..\src\food.cpp" />
     <ClCompile Include="..\src\game.cpp" />
     <ClCompile Include="..\src\gameField.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="..\src\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\colorScheme.h" />
     <ClInclude Include="..\src\food.h" />
     <ClInclude Include="..\src\game.h" />
     <ClInclude Include="..\src\gameField.h" />
