In game resolution and fullscreen mode changing.

--- a/MSVS/assets/colorScheme.ini
+++ b/MSVS/assets/colorScheme.ini
@@ -10,5 +10,16 @@ dialog=000010f0
 border=ffffffff
 cellEmpty=726fa5ff
 cellSnake=000090ff
-cellFood=2000f0ff
+cellFood=f9dd3eff
 cellDemo=5050ffff
+
+[red alert]
+background=ff3705ff
+text=ffc405ff
+selector=80000080
+dialog=000010f0
+border=800000ff
+cellEmpty=ffd449ff
+cellSnake=f00000ff
+cellFood=2000f0ff
+cellDemo=0000a0ff
