A menu resize bug fix.

--- a/MSVS/assets/colorScheme.ini
+++ b/MSVS/assets/colorScheme.ini
@@ -1,6 +1,6 @@
 #color code represented as 4 byte hexidecimal number
 #byte:  0      1       2      3
-#     alpha | blue | green | red
+#      red | green | blue | alpha
 #
 [blue moon]
 background=000010ff
