--- a/MSVS/snake1.vcxproj.filters
+++ b/MSVS/snake1.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="..\src\eventBus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\profileLayout.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\eventBus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\profileLayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
