Even more accurate fading. Text input in profile layout.

--- a/MSVS/snake1.vcxproj
+++ b/MSVS/snake1.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="..\src\profileLayout.cpp" />
     <ClCompile Include="..\src\resourceManager.cpp" />
     <ClCompile Include="..\src\settingsLayout.cpp" />
+    <ClCompile Include="..\src\sleepingMenuLayout.cpp" />
     <ClCompile Include="..\src\snake.cpp" />
     <ClCompile Include="..\src\uiWidget.cpp" />
     <ClCompile Include="..\src\utilities.cpp" />
@@ -53,6 +54,7 @@
     <ClInclude Include="..\src\newGameLayout.h" />
     <ClInclude Include="..\src\profileLayout.h" />
     <ClInclude Include="..\src\settingsLayout.h" />
+    <ClInclude Include="..\src\sleepingMenuLayout.h" />
     <ClInclude Include="..\src\uiWidget.h" />
     <ClInclude Include="..\src\uiLayout.h" />
     <ClInclude Include="..\src\menuScreen.h" />
