--- a/MSVS/snake1.vcxproj.filters
+++ b/MSVS/snake1.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="..\src\inGameLayout.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\sleepingMenuLayout.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\inGameLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\sleepingMenuLayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
