--- a/MSVS/snake1.vcxproj
+++ b/MSVS/snake1.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="..\src\menuScreen.cpp" />
     <ClCompile Include="..\src\newGameLayout.cpp" />
     <ClCompile Include="..\src\profileLayout.cpp" />
+    <ClCompile Include="..\src\profileManager.cpp" />
     <ClCompile Include="..\src\resourceManager.cpp" />
     <ClCompile Include="..\src\settingsLayout.cpp" />
     <ClCompile Include="..\src\sleepingMenuLayout.cpp" />
@@ -53,6 +54,7 @@
     <ClInclude Include="..\src\menuLayout.h" />
     <ClInclude Include="..\src\newGameLayout.h" />
     <ClInclude Include="..\src\profileLayout.h" />
+    <ClInclude Include="..\src\profileManager.h" />
     <ClInclude Include="..\src\settingsLayout.h" />
     <ClInclude Include="..\src\sleepingMenuLayout.h" />
     <ClInclude Include="..\src\uiWidget.h" />
