--- a/MSVS/snake1.vcxproj.filters
+++ b/MSVS/snake1.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\src\sleepingMenuLayout.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\profileManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\sleepingMenuLayout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\profileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
